2010-10-03  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Document and fix expansion of variables before rules.
	* doc/automake.texi (General Operation): Document that variables
	are expanded before rules.
	* lib/am/check.am (am__check_post): Reword a bit so it does not
	get matched as a rule.
	Suggestion by Ben Pfaff.

2010-10-02  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Coverage and minor fixes for variable typo detection.
	* automake.in (check_typos): Remove `EXTRA_' prefix when
	computing canonical name.
	* tests/vartypo2.test, tests/vartypos.test: New tests.
	* tests/Makefile.am (TESTS): Update.

	Implement EXTRA_maude_DEPENDENCIES for programs and libraries.
	* automake.in (handle_programs, handle_libraries)
	(handle_ltlibraries): Mark EXTRA_*_DEPENDENCIES as recognized.
	* doc/automake.texi (Linking, Program and Library Variables)
	(LIBOBJS): Document EXTRA_*_DEPENDENCIES.
	* lib/am/library.am (%LIBRARY%): Also depend on
	$(EXTRA_%XLIBRARY%_DEPENDENCIES).
	* lib/am/ltlibrary.am (%LTLIBRARY%): Also depend on
	(%XLTLIBRARY%_DEPENDENCIES).
	* lib/am/program.am (%PROGRAM%%EXEEXT%): Also depend on
	$(EXTRA_%XPROGRAM%_DEPENDENCIES).
	* tests/extradep.test, tests/extradep2.test: New tests.
	* tests/Makefile.am (TESTS): Update.
	* NEWS: Update.
	Suggested by Eric Blake.

	tests: avoid running into timing issues due to sanity change.
	* tests/acloca10.test, tests/acloca18.test, tests/aclocal9.test:
	Insert strategic sleep before aclocal reruns, to ensure files
	are newer.
	* tests/python11.test: Use --force for repeated autotools runs.
	Reports from the NixOS Hydra build daemon via Ludovic Courtès.

	Fix timestamp issues by ensuring configure takes at least a second.
	* m4/sanity.m4 (AM_SANITY_CHECK): If we didn't sleep here,
	start a sleep in the background and wait for it to finish
	before creating config.status, hopefully fixing all spurious
	testsuite failures involving botched time stamps.
	* NEWS: Update.