@@ -1,5 +1,11 @@
 2010-10-03  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	maintainer-check coverage for variables before rules.
+	* Makefile.am (sc_ensure_testsuite_has_run): Suggest keeping
+	around the test directories.
+	(sc_tests_makefile_variable_order): New rule with a heuristic to
+	catch ordering violations.
+
 	Document and fix expansion of variables before rules.
 	* doc/automake.texi (General Operation): Document that variables
 	are expanded before rules.
